fix: input,label tag and css in signup.html, signup.css

--- a/src/pages/signup.html
+++ b/src/pages/signup.html
@@ -59,7 +59,9 @@
                   <input type="text" name="id" id="id" placeholder="아이디" />
                 </div>
                 <div class="signup-pw">
-                  <label for="password" class="signup-form-label">비밀번호</label>
+                  <label for="password" class="signup-form-label"
+                    >비밀번호</label
+                  >
                   <input
                     type="password"
                     name="password"
@@ -71,13 +73,13 @@
                   <label for="name" class="signup-form-label">성함</label>
                   <input type="text" name="name" id="name" placeholder="성함" />
                 </div>
-                <div class="signup-regist">
-                  <label for="regist" class="signup-form-label">주민등록번호</label>
+                <div class="signup-email">
+                  <label for="email" class="signup-form-label">E-mail</label>
                   <input
                     type="text"
-                    name="registNum"
-                    id="registNum"
-                    placeholder="주민등록번호"
+                    name="email"
+                    id="email"
+                    placeholder="E-mail"
                   />
                 </div>
                 <div class="signup-button">
