--- a/signup.html
+++ b/signup.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Eladin</title>
-    <link rel="stylesheet" href="../css/signup.css" />
+    <link rel="stylesheet" href="./src/css/signup.css" />
   </head>
   <body>
     <div id="wrap">
@@ -53,7 +53,6 @@
           <div class="row">
             <div class="signup-area">
               <h2 class="signup-tit">회원가입</h2>
-              <form action="/signup" method="post">
                 <div class="signup-id">
                   <label for="id" class="signup-form-label">아이디</label>
                   <input type="text" name="id" id="id" placeholder="아이디" />
@@ -83,13 +82,15 @@
                   />
                 </div>
                 <div class="signup-button">
-                  <input type="submit" id="signup-btn" value="회원가입" />
+                  <button id="signup-btn">회원가입</button>
                 </div>
-              </form>
             </div>
           </div>
         </div>
       </article>
     </div>
   </body>
+  <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+  <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+  <script src="./src/api/signup.js"></script>
 </html>
