--- a/src/pages/order.html
+++ b/src/pages/order.html
@@ -135,7 +135,12 @@
                                     <p>받는사람<span> *</span></p>
                                 </div>
                                 <div class="name-field field">
-                                    <input id="name" type="text" name="name" />
+                                    <input
+                                        id="name"
+                                        class="essential"
+                                        type="text"
+                                        name="name"
+                                    />
                                 </div>
                                 <div class="address default">
                                     <p>주소<span> *</span></p>
@@ -144,6 +149,7 @@
                                     <div class="zipcode-input">
                                         <input
                                             id="postcode"
+                                            class="essential"
                                             type="text"
                                             placeholder="우편번호"
                                         />
@@ -153,11 +159,13 @@
                                     </div>
                                     <input
                                         id="address"
+                                        class="essential"
                                         type="text"
                                         placeholder="주소"
                                     />
                                     <input
                                         id="detailAddress"
+                                        class="essential"
                                         type="text"
                                         placeholder="상세 주소"
                                         name="address2"
@@ -175,6 +183,7 @@
                                     <input
                                         type="tel"
                                         id="phone-num"
+                                        class="essential"
                                         name="phone-num"
                                         maxlength="13"
                                     />
