create:login.js, fix:signup.html,login.html

--- a/src/pages/login.html
+++ b/src/pages/login.html
@@ -51,7 +51,6 @@
       <article id="login">
         <div class="login container">
           <div class="row">
-            <form action="/login" method="post">
               <div class="login-area">
                 <div class="login-area-center">
                   <h2 class="login-tit">
@@ -77,10 +76,12 @@
                   <input type="submit" value="로그인" id="login_btn" />
                 </div>
               </div>
-            </form>
           </div>
         </div>
       </article>
     </div>
   </body>
+  <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+  <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+  <script src="../api/login.js"></script>
 </html>
