--- a/src/pages/signup.html
+++ b/src/pages/signup.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Eladin</title>
-    <link rel="stylesheet" href="./src/css/signup.css" />
+    <link rel="stylesheet" href="../css/signup.css" />
   </head>
   <body>
     <div id="wrap">
@@ -92,5 +92,5 @@
   </body>
   <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
   <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
-  <script src="./src/api/signup.js"></script>
+  <script src="../api/signup.js"></script>
 </html>
