fix: signup button

--- a/src/pages/signup.html
+++ b/src/pages/signup.html
@@ -82,7 +82,7 @@
                   />
                 </div>
                 <div class="signup-button">
-                  <button id="signup-btn">회원가입</button>
+                  <input type="submit" id="signup-btn" value="회원가입" />
                 </div>
             </div>
           </div>
