create: added relative path link

--- a/src/pages/modify_mypage.html
+++ b/src/pages/modify_mypage.html
@@ -20,17 +20,22 @@
                     <div class="header-top-bar">
                         <ul class="header-top-list">
                             <li class="header-top-item">
-                                <a href="#" class="join">회원가입</a>
+                                <a href="./signup.html" class="join"
+                                    >회원가입</a
+                                >
                             </li>
                             <li class="header-top-item">
-                                <a href="#" class="login">로그인</a>
+                                <a href="./login.html" class="login">로그인</a>
                             </li>
                         </ul>
                     </div>
                     <div class="header-title">
                         <nav class="header-title-nav">
                             <div class="header-title-logo">
-                                <a href="#" class="header-title-link">
+                                <a
+                                    href="../index.html"
+                                    class="header-title-link"
+                                >
                                     <div class="header-title-name">Eladin</div>
                                 </a>
                             </div>
@@ -46,7 +51,10 @@
                             </form>
                             <div class="header-title-info">
                                 <div class="header-info-item">
-                                    <a href="#" class="header-info-basket">
+                                    <a
+                                        href="./cart.html"
+                                        class="header-info-basket"
+                                    >
                                         <img
                                             src="https://svgsilh.com/svg/371980.svg"
                                             alt="장바구니 이미지"
@@ -55,7 +63,10 @@
                                     </a>
                                 </div>
                                 <div class="header-info-item">
-                                    <a href="#" class="header-info-my">
+                                    <a
+                                        href="./mypage.html"
+                                        class="header-info-my"
+                                    >
                                         <img
                                             src="https://svgsilh.com/svg/158453.svg"
                                             alt="사람모양 이미지"
@@ -73,7 +84,7 @@
             <main id="main" role="main">
                 <div class="container">
                     <div class="row">
-                        <a href="#"
+                        <a href="./mypage.html"
                             ><li class="header-text">
                                 <span>마이페이지</span>
                             </li></a
