--- a/src/pages/mypage.html
+++ b/src/pages/mypage.html
@@ -21,17 +21,22 @@
                     <div class="header-top-bar">
                         <ul class="header-top-list">
                             <li class="header-top-item">
-                                <a href="#" class="join">회원가입</a>
+                                <a href="./signup.html" class="join"
+                                    >회원가입</a
+                                >
                             </li>
                             <li class="header-top-item">
-                                <a href="#" class="login">로그인</a>
+                                <a href="./login.html" class="login">로그인</a>
                             </li>
                         </ul>
                     </div>
                     <div class="header-title">
                         <nav class="header-title-nav">
                             <div class="header-title-logo">
-                                <a href="#" class="header-title-link">
+                                <a
+                                    href="../index.html"
+                                    class="header-title-link"
+                                >
                                     <div class="header-title-name">Eladin</div>
                                 </a>
                             </div>
@@ -47,7 +52,10 @@
                             </form>
                             <div class="header-title-info">
                                 <div class="header-info-item">
-                                    <a href="#" class="header-info-basket">
+                                    <a
+                                        href="./cart.html"
+                                        class="header-info-basket"
+                                    >
                                         <img
                                             src="https://svgsilh.com/svg/371980.svg"
                                             alt="장바구니 이미지"
@@ -56,7 +64,10 @@
                                     </a>
                                 </div>
                                 <div class="header-info-item">
-                                    <a href="#" class="header-info-my">
+                                    <a
+                                        href="./mypage.html"
+                                        class="header-info-my"
+                                    >
                                         <img
                                             src="https://svgsilh.com/svg/158453.svg"
                                             alt="사람모양 이미지"
@@ -87,9 +98,11 @@
                             <div class="main-aboutUser">
                                 <div class="top">
                                     <h3 class="user-name">홍길동</h3>
-                                    <button class="update-detail-btn">
-                                        내 정보 변경
-                                    </button>
+                                    <a href="./modify_mypage.html"
+                                        ><button class="update-detail-btn">
+                                            내 정보 변경
+                                        </button></a
+                                    >
                                 </div>
                                 <p class="email">eladin@gmail.com</p>
                                 <p class="phone-num">010-0000-0000</p>
