--- a/src/index.html
+++ b/src/index.html
@@ -15,17 +15,21 @@
                     <div class="header-top-bar">
                         <ul class="header-top-list">
                             <li class="header-top-item">
-                                <a href="#" class="join">회원가입</a>
+                                <a href="./pages/signup.html" class="join"
+                                    >회원가입</a
+                                >
                             </li>
                             <li class="header-top-item">
-                                <a href="#" class="login">로그인</a>
+                                <a href="./pages/login.html" class="login"
+                                    >로그인</a
+                                >
                             </li>
                         </ul>
                     </div>
                     <div class="header-title">
                         <nav class="header-title-nav">
                             <div class="header-title-logo">
-                                <a href="#" class="header-title-link">
+                                <a href="." class="header-title-link">
                                     <div class="header-title-name">Eladin</div>
                                 </a>
                             </div>
@@ -41,7 +45,10 @@
                             </form>
                             <div class="header-title-info">
                                 <div class="header-info-item">
-                                    <a href="#" class="header-info-basket">
+                                    <a
+                                        href="./pages/cart.html"
+                                        class="header-info-basket"
+                                    >
                                         <img
                                             src="https://svgsilh.com/svg/371980.svg"
                                             alt="장바구니 이미지"
@@ -50,7 +57,10 @@
                                     </a>
                                 </div>
                                 <div class="header-info-item">
-                                    <a href="#" class="header-info-my">
+                                    <a
+                                        href="./pages/mypage.html"
+                                        class="header-info-my"
+                                    >
                                         <img
                                             src="https://svgsilh.com/svg/158453.svg"
                                             alt="사람모양 이미지"
@@ -67,7 +77,10 @@
             <!-- 카테고리 네비게이션 영역 시작 -->
             <nav class="all-category-nav">
                 <div class="all-category-container container">
-                    <a href="./pages/category.html" class="all-category-link">
+                    <a
+                        href="./pages/book_category.html"
+                        class="all-category-link"
+                    >
                         <span class="all-category-text">전체 카테고리</span>
                     </a>
                 </div>
