--- a/src/pages/book_category.html
+++ b/src/pages/book_category.html
@@ -15,10 +15,12 @@
                     <div class="header-top-bar">
                         <ul class="header-top-list">
                             <li class="header-top-item">
-                                <a href="#" class="join">회원가입</a>
+                                <a href="./signup.html" class="join"
+                                    >회원가입</a
+                                >
                             </li>
                             <li class="header-top-item">
-                                <a href="#" class="login">로그인</a>
+                                <a href="./login.html" class="login">로그인</a>
                             </li>
                         </ul>
                     </div>
@@ -44,7 +46,10 @@
                             </form>
                             <div class="header-title-info">
                                 <div class="header-info-item">
-                                    <a href="#" class="header-info-basket">
+                                    <a
+                                        href="./cart.html"
+                                        class="header-info-basket"
+                                    >
                                         <img
                                             src="https://svgsilh.com/svg/371980.svg"
                                             alt="장바구니 이미지"
@@ -53,7 +58,10 @@
                                     </a>
                                 </div>
                                 <div class="header-info-item">
-                                    <a href="#" class="header-info-my">
+                                    <a
+                                        href="./mypage.html"
+                                        class="header-info-my"
+                                    >
                                         <img
                                             src="https://svgsilh.com/svg/158453.svg"
                                             alt="사람모양 이미지"
@@ -104,24 +112,36 @@
                                             >밤은 책이다</a
                                         >
                                     </h3>
-                                    <div class="category-book-item-output">
-                                        <div class="category-book-item-author">
-                                            이동진
+                                    <div class="category-book-item-about">
+                                        <div class="category-book-item-output">
+                                            <div
+                                                class="category-book-item-author"
+                                            >
+                                                이동진
+                                            </div>
+                                            <div
+                                                class="category-book-item-publisher"
+                                            >
+                                                위즈덤하우스
+                                            </div>
                                         </div>
-                                        <div
-                                            class="category-book-item-publisher"
-                                        >
-                                            위즈덤하우스
-                                        </div>
+                                        <p class="category-book-item-describe">
+                                            시간과 연민, 사랑에 대하여 이동진과
+                                            함께 읽는 책들
+                                        </p>
+                                        <p class="category-book-item-price">
+                                            구매
+                                            <span>13,500원</span>
+                                        </p>
                                     </div>
-                                    <p class="category-book-item-describe">
-                                        시간과 연민, 사랑에 대하여 이동진과 함께
-                                        읽는 책들
-                                    </p>
-                                    <p class="category-book-item-price">
-                                        구매
-                                        <span>13,500원</span>
-                                    </p>
+                                </div>
+                                <div class="book-btn">
+                                    <button class="add-cart">
+                                        카트에 담기
+                                    </button>
+                                    <button class="order-book">
+                                        바로 구매
+                                    </button>
                                 </div>
                             </li>
                             <li class="category-book-item">
@@ -142,32 +162,45 @@
                                             >아무것도 없는책</a
                                         >
                                     </h3>
-                                    <div class="category-book-item-output">
-                                        <div class="category-book-item-author">
-                                            레미쿠르종
+                                    <div class="category-book-item-about">
+                                        <div class="category-book-item-output">
+                                            <div
+                                                class="category-book-item-author"
+                                            >
+                                                레미쿠르종
+                                            </div>
+                                            <div
+                                                class="category-book-item-publisher"
+                                            >
+                                                주니어RHK
+                                            </div>
                                         </div>
-                                        <div
-                                            class="category-book-item-publisher"
-                                        >
-                                            주니어RHK
-                                        </div>
+                                        <p class="category-book-item-describe">
+                                            어느 날, 평소 말수가 적던 할아버지가
+                                            손녀 알리시아에게 책 한 권을
+                                            물려준다. 책을 펼쳐 본 알리시아는
+                                            어리둥절하다. 안에는 온통 흰 종이뿐,
+                                            아무것도 없었기 때문이다. 할아버지는
+                                            알리시아에게 《아무것도 없는 책》이
+                                            가진 비밀을 들려주기 시작한다.
+                                            그리고 알리시아의 인생은
+                                            놀라우리만치 새로워지는데……. 과연
+                                            《아무것도 없는 책》이 품고 있는
+                                            비밀은 무엇일까?
+                                        </p>
+                                        <p class="category-book-item-price">
+                                            구매
+                                            <span>12,600원</span>
+                                        </p>
                                     </div>
-                                    <p class="category-book-item-describe">
-                                        어느 날, 평소 말수가 적던 할아버지가
-                                        손녀 알리시아에게 책 한 권을 물려준다.
-                                        책을 펼쳐 본 알리시아는 어리둥절하다.
-                                        안에는 온통 흰 종이뿐, 아무것도 없었기
-                                        때문이다. 할아버지는 알리시아에게
-                                        《아무것도 없는 책》이 가진 비밀을
-                                        들려주기 시작한다. 그리고 알리시아의
-                                        인생은 놀라우리만치 새로워지는데……. 과연
-                                        《아무것도 없는 책》이 품고 있는 비밀은
-                                        무엇일까?
-                                    </p>
-                                    <p class="category-book-item-price">
-                                        구매
-                                        <span>12,600원</span>
-                                    </p>
+                                </div>
+                                <div class="book-btn">
+                                    <button class="add-cart">
+                                        카트에 담기
+                                    </button>
+                                    <button class="order-book">
+                                        바로 구매
+                                    </button>
                                 </div>
                             </li>
                             <li class="category-book-item">
@@ -188,32 +221,45 @@
                                             >아무것도 없는책</a
                                         >
                                     </h3>
-                                    <div class="category-book-item-output">
-                                        <div class="category-book-item-author">
-                                            레미쿠르종
+                                    <div class="category-book-item-about">
+                                        <div class="category-book-item-output">
+                                            <div
+                                                class="category-book-item-author"
+                                            >
+                                                레미쿠르종
+                                            </div>
+                                            <div
+                                                class="category-book-item-publisher"
+                                            >
+                                                주니어RHK
+                                            </div>
                                         </div>
-                                        <div
-                                            class="category-book-item-publisher"
-                                        >
-                                            주니어RHK
-                                        </div>
+                                        <p class="category-book-item-describe">
+                                            어느 날, 평소 말수가 적던 할아버지가
+                                            손녀 알리시아에게 책 한 권을
+                                            물려준다. 책을 펼쳐 본 알리시아는
+                                            어리둥절하다. 안에는 온통 흰 종이뿐,
+                                            아무것도 없었기 때문이다. 할아버지는
+                                            알리시아에게 《아무것도 없는 책》이
+                                            가진 비밀을 들려주기 시작한다.
+                                            그리고 알리시아의 인생은
+                                            놀라우리만치 새로워지는데……. 과연
+                                            《아무것도 없는 책》이 품고 있는
+                                            비밀은 무엇일까?
+                                        </p>
+                                        <p class="category-book-item-price">
+                                            구매
+                                            <span>12,600원</span>
+                                        </p>
                                     </div>
-                                    <p class="category-book-item-describe">
-                                        어느 날, 평소 말수가 적던 할아버지가
-                                        손녀 알리시아에게 책 한 권을 물려준다.
-                                        책을 펼쳐 본 알리시아는 어리둥절하다.
-                                        안에는 온통 흰 종이뿐, 아무것도 없었기
-                                        때문이다. 할아버지는 알리시아에게
-                                        《아무것도 없는 책》이 가진 비밀을
-                                        들려주기 시작한다. 그리고 알리시아의
-                                        인생은 놀라우리만치 새로워지는데……. 과연
-                                        《아무것도 없는 책》이 품고 있는 비밀은
-                                        무엇일까?
-                                    </p>
-                                    <p class="category-book-item-price">
-                                        구매
-                                        <span>12,600원</span>
-                                    </p>
+                                </div>
+                                <div class="book-btn">
+                                    <button class="add-cart">
+                                        카트에 담기
+                                    </button>
+                                    <button class="order-book">
+                                        바로 구매
+                                    </button>
                                 </div>
                             </li>
                         </ul>
