--- a/src/pages/order.html
+++ b/src/pages/order.html
@@ -14,10 +14,12 @@
                     <div class="header-top-bar">
                         <ul class="header-top-list">
                             <li class="header-top-item">
-                                <a href="#" class="join">회원가입</a>
+                                <a href="./signup.html" class="join"
+                                    >회원가입</a
+                                >
                             </li>
                             <li class="header-top-item">
-                                <a href="#" class="login">로그인</a>
+                                <a href="./login.html" class="login">로그인</a>
                             </li>
                         </ul>
                     </div>
@@ -25,7 +27,11 @@
                         <nav class="header-title-nav">
                             <div class="header-title-logo">
                                 <a href="#" class="header-title-link">
-                                    <div class="header-title-name">Eladin</div>
+                                    <a href="../index.html"
+                                        ><div class="header-title-name">
+                                            Eladin
+                                        </div></a
+                                    >
                                 </a>
                             </div>
                             <form class="header-title-search" role="seacrch">
@@ -40,7 +46,10 @@
                             </form>
                             <div class="header-title-info">
                                 <div class="header-info-item">
-                                    <a href="#" class="header-info-basket">
+                                    <a
+                                        href="./cart.html"
+                                        class="header-info-basket"
+                                    >
                                         <img
                                             src="https://svgsilh.com/svg/371980.svg"
                                             alt="장바구니 이미지"
@@ -49,7 +58,10 @@
                                     </a>
                                 </div>
                                 <div class="header-info-item">
-                                    <a href="#" class="header-info-my">
+                                    <a
+                                        href="./mypage.html"
+                                        class="header-info-my"
+                                    >
                                         <img
                                             src="https://svgsilh.com/svg/158453.svg"
                                             alt="사람모양 이미지"
