--- a/src/pages/signup.html
+++ b/src/pages/signup.html
@@ -15,19 +15,23 @@
                         <div class="header">
                             <div class="header-logo">
                                 <!-- <img src="../img/test.jpeg" alt="로고 이미지"> -->
-                                <h1>Eladin</h1>
+                                <a href="../index.html"><h1>Eladin</h1></a>
                             </div>
                             <div class="header-user">
                                 <div class="header-user-login">
                                     <ul>
-                                        <li><a href="#">회원가입</a></li>
-                                        <li><a href="#">로그인</a></li>
+                                        <li>
+                                            <a href="./signup.html">회원가입</a>
+                                        </li>
+                                        <li>
+                                            <a href="./login.html">로그인</a>
+                                        </li>
                                     </ul>
                                 </div>
                                 <div class="header-user-info">
                                     <ul>
                                         <li>
-                                            <a href="#"
+                                            <a href="./cart.html"
                                                 ><i
                                                     class="fa fa-shopping-cart"
                                                     aria-hidden="true"
@@ -35,7 +39,7 @@
                                             ></a>
                                         </li>
                                         <li>
-                                            <a href="#"
+                                            <a href="./mypage.html"
                                                 ><i
                                                     class="fa fa-user"
                                                     blank="-target"
