--- a/src/pages/order.html
+++ b/src/pages/order.html
@@ -9,29 +9,28 @@
     </head>
     <body>
         <div id="wrap">
+            <!-- 헤더 영역 시작 -->
             <header class="header">
                 <div class="header-container container">
                     <div class="header-top-bar">
                         <ul class="header-top-list">
                             <li class="header-top-item">
-                                <a href="./signup.html" class="join"
+                                <a href="./pages/signup.html" class="join"
                                     >회원가입</a
                                 >
                             </li>
                             <li class="header-top-item">
-                                <a href="./login.html" class="login">로그인</a>
+                                <a href="./pages/login.html" class="login"
+                                    >로그인</a
+                                >
                             </li>
                         </ul>
                     </div>
                     <div class="header-title">
                         <nav class="header-title-nav">
                             <div class="header-title-logo">
-                                <a href="#" class="header-title-link">
-                                    <a href="../index.html"
-                                        ><div class="header-title-name">
-                                            Eladin
-                                        </div></a
-                                    >
+                                <a href="." class="header-title-link">
+                                    <div class="header-title-name">Eladin</div>
                                 </a>
                             </div>
                             <form class="header-title-search" role="seacrch">
@@ -47,7 +46,7 @@
                             <div class="header-title-info">
                                 <div class="header-info-item">
                                     <a
-                                        href="./cart.html"
+                                        href="./pages/cart.html"
                                         class="header-info-basket"
                                     >
                                         <img
@@ -59,7 +58,7 @@
                                 </div>
                                 <div class="header-info-item">
                                     <a
-                                        href="./mypage.html"
+                                        href="./pages/mypage.html"
                                         class="header-info-my"
                                     >
                                         <img
@@ -74,6 +73,7 @@
                     </div>
                 </div>
             </header>
+            <!-- 헤더 영역 종료 -->
 
             <main id="main" role="main">
                 <div class="container">
