fix: dummy data rendering -> section.products-list container

--- a/src/index.html
+++ b/src/index.html
@@ -135,6 +135,11 @@
                         </div>
                     </div>
                 </section>
+                <!--상품리스트 렌더링-->
+
+                <section class="products-list container">
+                    
+                </section>
             </main>
             <!-- 메인 영역 종료 -->
             <!-- 푸터 영역 시작 -->
@@ -171,4 +176,9 @@
             <!-- 푸터 영역 종료 -->
         </div>
     </body>
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+  <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+    <script src="./api/getCategory.js"></script>
+    <script src="./api/getProducts.js"></script>
+    <script src="./index.js"></script>
 </html>
