fix: login, signup, mypage

--- a/src/pages/mypage.html
+++ b/src/pages/mypage.html
@@ -203,6 +203,7 @@
                 </div>
             </footer>
         </div>
+        <script src="../api/mypage.js"></script>
         <script src="../js/mypage.js"></script>
     </body>
 </html>
