--- a/src/pages/signup.html
+++ b/src/pages/signup.html
@@ -163,6 +163,9 @@
                 </div>
             </article>
         </div>
+        <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+        <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
         <script src="../js/signup.js"></script>
+        <script src="../api/signup.js"></script>
     </body>
 </html>
