fix: 회원가입 유효성 검사와 통신 로직 연결

--- a/src/pages/signup.html
+++ b/src/pages/signup.html
@@ -60,104 +60,98 @@
                     <div class="row">
                         <div class="signup-area">
                             <h2 class="signup-tit">회원가입</h2>
-                            <form action="/signup" method="post" id="form">
-                                <div class="signup-id">
-                                    <label for="id" class="signup-form-label"
-                                        >아이디</label
-                                    >
-                                    <input
-                                        type="text"
-                                        name="id"
-                                        id="id"
-                                        placeholder="아이디"
-                                    />
-                                    <small>Error message</small>
-                                </div>
-                                <div class="signup-pw pwform">
-                                    <label
-                                        for="password"
-                                        class="signup-form-label"
-                                        >비밀번호</label
-                                    >
-                                    <input
-                                        type="password"
-                                        name="password"
-                                        id="password"
-                                        placeholder="비밀번호"
-                                    />
-                                    <span class="lock-icon">
-                                        <i
-                                            class="fa fa-lock"
-                                            aria-hidden="true"
-                                        ></i>
-                                    </span>
-                                    <span class="unlock-icon">
-                                        <i
-                                            class="fa fa-unlock"
-                                            aria-hidden="true"
-                                        ></i>
-                                    </span>
-                                    <small>Error message</small>
-                                </div>
-                                <div class="check-pw pwform">
-                                    <label
-                                        for="password"
-                                        class="signup-form-label"
-                                        >비밀번호 확인</label
-                                    >
-                                    <input
-                                        type="password"
-                                        name="password2"
-                                        id="password2"
-                                        placeholder="비밀번호 확인"
-                                    />
-                                    <span class="lock-icon">
-                                        <i
-                                            class="fa fa-lock"
-                                            aria-hidden="true"
-                                        ></i>
-                                    </span>
-                                    <span class="unlock-icon">
-                                        <i
-                                            class="fa fa-unlock"
-                                            aria-hidden="true"
-                                        ></i>
-                                    </span>
+                            <div class="signup-id">
+                                <label for="id" class="signup-form-label"
+                                    >아이디</label
+                                >
+                                <input
+                                    type="text"
+                                    name="id"
+                                    id="id"
+                                    placeholder="아이디"
+                                />
+                                <small>Error message</small>
+                            </div>
+                            <div class="signup-pw pwform">
+                                <label for="password" class="signup-form-label"
+                                    >비밀번호</label
+                                >
+                                <input
+                                    type="password"
+                                    name="password"
+                                    id="password"
+                                    placeholder="비밀번호"
+                                />
+                                <span class="lock-icon">
+                                    <i
+                                        class="fa fa-lock"
+                                        aria-hidden="true"
+                                    ></i>
+                                </span>
+                                <span class="unlock-icon">
+                                    <i
+                                        class="fa fa-unlock"
+                                        aria-hidden="true"
+                                    ></i>
+                                </span>
+                                <small>Error message</small>
+                            </div>
+                            <div class="check-pw pwform">
+                                <label for="password" class="signup-form-label"
+                                    >비밀번호 확인</label
+                                >
+                                <input
+                                    type="password"
+                                    name="check-password"
+                                    id="check-password"
+                                    placeholder="비밀번호 확인"
+                                />
+                                <span class="lock-icon">
+                                    <i
+                                        class="fa fa-lock"
+                                        aria-hidden="true"
+                                    ></i>
+                                </span>
+                                <span class="unlock-icon">
+                                    <i
+                                        class="fa fa-unlock"
+                                        aria-hidden="true"
+                                    ></i>
+                                </span>
 
-                                    <small>Error message</small>
-                                </div>
-                                <div class="signup-name">
-                                    <label for="name" class="signup-form-label"
-                                        >성함</label
-                                    >
-                                    <input
-                                        type="text"
-                                        name="name"
-                                        id="name"
-                                        placeholder="성함"
-                                    />
-                                    <small>Error message</small>
-                                </div>
-                                <div class="signup-email">
-                                    <label for="email" class="signup-form-label"
-                                        >E-mail</label
-                                    >
-                                    <input
-                                        type="text"
-                                        name="email"
-                                        id="email"
-                                        placeholder="E-mail"
-                                    />
-                                    <small>Error message</small>
-                                </div>
-                                <div class="signup-button">
-                                    <input
-                                        type="submit"
-                                        id="signup-btn"
-                                        value="회원가입"
-                                    />
-                                </div>
-                            </form>
+                                <small>Error message</small>
+                            </div>
+                            <div class="signup-name">
+                                <label for="name" class="signup-form-label"
+                                    >성함</label
+                                >
+                                <input
+                                    type="text"
+                                    name="name"
+                                    id="name"
+                                    placeholder="성함"
+                                />
+                                <small>Error message</small>
+                            </div>
+                            <div class="signup-email">
+                                <label for="email" class="signup-form-label"
+                                    >E-mail</label
+                                >
+                                <input
+                                    type="text"
+                                    name="email"
+                                    id="email"
+                                    placeholder="E-mail"
+                                />
+                                <small>Error message</small>
+                            </div>
+                            <div class="signup-button">
+                                <input
+                                    type="submit"
+                                    id="signup-btn"
+                                    value="회원가입"
+                                />
+                            </div>
                         </div>
                     </div>
                 </div>
